--- a/public/index.html
+++ b/public/index.html
@@ -17,10 +17,9 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Mid Term Exam - Santiago Castano Henao</title>
-    <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.x.x/firebase-auth.js"></script>
-    <script src="js-firebase/firebase.js"></script>
-    <script src="js-firebase/main.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
+    <script src="/js-firebase/firebase.js"></script>
+    <script src="/js-firebase/main.js"></script>
   </head>
   <body>
   
