--- a/public/index.html
+++ b/public/index.html
@@ -18,8 +18,8 @@
 
     <title>Mid Term Exam - Santiago Castano Henao</title>
     <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
-    <script src="/js-firebase/firebase.js"></script>
-    <script src="/js-firebase/main.js"></script>
+    <script src="./js-firebase/firebase.js"></script>
+    <script src="./js-firebase/main.js"></script>
   </head>
   <body>
   
