--- a/public/index.html
+++ b/public/index.html
@@ -53,8 +53,9 @@
                 
                 
                 <div class="">
-                <input type="text" id="phone-number" placeholder="Enter phone number" class="form-control">
+
                 <div id="recaptcha-container"></div>
+                <input type="text" id="phone-number" placeholder="Enter phone number" class="form-control d-none">
                 <a href="#" class="btn btn-block py-2 btn-dark text-white" id="log-in-phonenumber">
                   <span class="icon-phone mr-3"></span> Login with your Phone Number
                 </a>
