--- a/public/culturalconnections.html
+++ b/public/culturalconnections.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
+    <link rel="shortcut icon" href="images/logo.png" type="image/png">
     <script src="./js-firebase/firebase.js"></script>
     <script src="./js-firebase/culturalconnections.js"></script>
 </head>
