--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <title>Mid Term Exam - Santiago Castano Henao</title>
+    <link rel="shortcut icon" href="images/logo.png" type="image/png">
     <script src="https://www.gstatic.com/firebasejs/4.5.2/firebase.js"></script>
     <script src="./js-firebase/firebase.js"></script>
     <script src="./js-firebase/main.js"></script>
